--- a/index.html
+++ b/index.html
@@ -5,21 +5,13 @@ metakey: Ran Aizen,网络技术,SouFii,Blog,JavaScript,Node.js,个人博客
 metades: Ran Aizen的个人博客，记录web和linux
 ---
 
-<h1>最新文章</h1>
-{% for post in site.posts limit:5 %}
-	<div class="hero-unit">
-		<h2>{{ post.title }}</h2>
-		<p>{{ post.excerpt }}</p>
-	</div>
-	<div class="pull-right">
-	{{ post.date | date_to_long_string }} | <span class="label {{ post.kind }}">{{ post.label }}</span>
-	</div>
-	<p>
-	<a href="{{site.url}}{{post.url}}" class="btn btn-primary btn-large">浏览全文</a>
-	</p>
-	{% if forloop.index != 5 %}
-		<hr>
-	{% endif %}
-	<br>
-{% endfor %}
 
+<h1 class="center">最新文章</h1>
+{% for post in site.posts limit:5 %}
+	<div class="block {{ forloop.index0 }}">
+		<h2><a href="{{site.url}}{{post.url}}" class="center">{{ post.title }}</a></h2>
+		<p>{{ post.excerpt }}</p>
+		<h3 class="center">日期:{{ post.date | date_to_long_string }}</h3>
+		<label>{{ post.label }}</label>
+	</div>
+{% endfor %}
