--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: SouFii.
+title: Ran Aizen 2013
 metakey: Ran Aizen,网络技术,SouFii,Blog,JavaScript,Node.js,个人博客
 metades: Ran Aizen的个人博客，记录web和linux
 ---
