--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ metades: Ran Aizen的个人博客，记录web和linux
 ---
 
 {% for post in site.posts limit:5 %}
-	<div class="block {{ forloop.index0 }}">
+	<div class="block {{ forloop.index0 + 4 }}">
 		<h2 class="center"><a href="{{site.url}}{{post.url}}">{{ post.title }}</a></h2>
 		<p>{{ post.excerpt }}</p>
 		<h3 class="center">日期:{{ post.date | date_to_long_string }}</h3>
