--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ metades: Ran Aizen的个人博客，记录web和linux
 		<h2 class="center"><a href="{{site.url}}{{post.url}}">{{ post.title }}</a></h2>
 		<p>{{ post.excerpt }}</p>
 		<h3 class="center">日期:{{ post.date | date_to_long_string }}</h3>
-		<label class="center">{{ post.label }}</label>
+		<center><label>{{ post.label }}</label></center>
 	</div>
 {% endfor %}
