update css & add Dushuo remark plugins

--- a/jscool/index.html
+++ b/jscool/index.html
@@ -9,6 +9,7 @@ metades:
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" href="{{site.url}}/source/style/style.css">
 	<title>{{page.title}}</title>
 </head>
