--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ metakey: Ran Aizen,网络技术,SouFii,Blog,JavaScript,Node.js,个人博客
 metades: Ran Aizen的个人博客，记录web和linux
 ---
 
-{% for post in site.posts limit:10 %}
+{% for post in paginator.posts %}
 	<div class="block {{ forloop.index0 + 4 }}">
 		<h4 class="center"><a href="{{site.url}}{{post.url}}">{{ post.title }}</a></h4>
 		<p>{{ post.excerpt }}</p>
@@ -13,3 +13,20 @@ metades: Ran Aizen的个人博客，记录web和linux
 		<center><label>{{ post.label }}</label></center>
 	</div>
 {% endfor %}
+{% if paginator.previous_page != nil %}
+    {% if paginator.previous_page == 1 %}
+        <a href="{{site.url}}/">Previous</a>
+    {% else %}
+        <a href="{{site.url}}/page{{paginator.previous_page}}">Previous</a>
+    {% endif %}
+{% endif %}
+{% for page in (1..paginator.total_pages) %}
+    {% if page != 1 %}
+        <a href="{{site.url}}/page{{paginator}}"> {{page}} </a>
+    {% else %}
+        <a href="{{site.url}}/"></a>
+    {% endif %}
+{% endfor %}
+{% if paginator.next_page != nil %}
+    <a href="{{site.url}}/page{{paginator.next_page}}">Next</a>
+{% endif %}
