--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ metades: Ran Aizen的个人博客，记录web和linux
 		<center><label>{{ post.label }}</label></center>
 	</div>
 {% endfor %}
+
 {% if paginator.previous_page != nil %}
     {% if paginator.previous_page == 1 %}
         <a href="{{site.url}}/">Previous</a>
@@ -20,13 +21,15 @@ metades: Ran Aizen的个人博客，记录web和linux
         <a href="{{site.url}}/page{{paginator.previous_page}}">Previous</a>
     {% endif %}
 {% endif %}
+
 {% for page in (1..paginator.total_pages) %}
     {% if page != 1 %}
         <a href="{{site.url}}/page{{paginator}}"> {{page}} </a>
     {% else %}
-        <a href="{{site.url}}/"></a>
+        <a href="{{site.url}}">{{page}}</a>
     {% endif %}
 {% endfor %}
+
 {% if paginator.next_page != nil %}
     <a href="{{site.url}}/page{{paginator.next_page}}">Next</a>
 {% endif %}
